@@ -1,11 +1,13 @@
 ## CHANGELOG
 
-- __2013/02/23__: 0.9.6 release.
+- __2013/07/07: 0.9.6 release.
     - Upgrade to mecab 0.996, following on the heels of the earlier 0.995 release
+    - Requiring ffi 1.9.0 or greater
     - Adding support for partial parsing mode (-p / --partial)
     - Adding support for marginal probability output mode (-m / --marginal)
     - Adding support for maximum grouping size for unknown words (-M / --max-grouping-size)
     - Outputting warning message for deprecation of :lattice_level option
+    - Dropping support for Ruby 1.8.7
     - Migrating to minitest
     - Removing automatic library load for Cygwin platform (does not compile) 
 
